--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <title>Projeto Git    </title>
 </head>
 <body>
-    <h1>Aula de git/GitHub</h1>
+
+
+      <h1>Aula de git/GitHub</h1>
+ 
+<p>Sequência para uso do Git</p>
+
+    <p>mkdir projeto   ->  cria diretório</p>  
+    <p>cd projeto      ->  entra na pasta diretório criado </p>
+    <p>git init        ->  inicia projeto Git</p>
+    <p>git status      ->  verifica status projeto Git</p>
+    <p>git add .       ->  adiciona para o stage 2° etapa </p>
+    <p>git commit -m "mensagem aqui"  ->  Marca Ponto ono tempo com o modificação criada</p>
+    <p>git log   -> Ver os pontos comitados no projeto</p>
+    <p>ls -a  lista diretórios</p>
+
+
+   <h1>…or create a new repository on the command line</h1> 
+<pre>echo "# projetoGit" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/DeividGit/projetoGit.git
+git push -u origin main</pre>  
+    
+
+<h1>…or push an existing repository from the command line</h1>
+
+<pre>
+
+git remote add origin https://github.com/DeividGit/projetoGit.git
+git branch -M main
+git push -u origin main
+</pre>
     
 </body>
+<script src="./js/script.js"></script>
 </html>
